Use word wrap in collection settings to prevent huge width.

One label caused issues with translated versions of Amarok: The whole
dialog would become extremely wide, depending on the length of the translated
text. I've enabled word wrap to fix this.

BUG: 233752